manifest-kibana.yaml
---
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kibana
  namespace: elk
  labels:
    app: kibana
    stack: logging
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kibana
        stack: logging
    spec:
      # FIXME
      # healthcheck + resources
      containers:
      - name: kibana
        image: kibana:7.3.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5601
        resources: {}
        volumeMounts:
        - name: config
          mountPath: /usr/share/kibana/kibana.yml
          subPath: kibana.yml
      restartPolicy: Always
#      hostNetwork: true
      volumes:
      - name: config
        configMap:
          name: kibana
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: elk
  labels:
    app: kibana
    stack: logging
spec:
  type: NodePort
  ports:
  - name: "ui"
    port: 5601
    nodePort: 33045
    targetPort: 5601
  selector:
    app: kibana
    stack: logging
---
apiVersion: v1
kind: Service
metadata:
  name: kibana-internal-svc
  namespace: elk
  labels:
    app: kibana-internal-svc
    stack: logging
spec:
  type: ClusterIP
  ports:
  - name: "ui"
    port: 5601
    targetPort: 5601
  selector:
    app: kibana
    stack: logging
---
