manifest-ingressrules.yaml
---
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana
  namespace: elk
  labels:
    app: kibana
    stack: logging
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: kibana
          servicePort: 5601
